--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -115,6 +115,17 @@
 			<version>3.0.2</version>
 		</dependency>
 		<!-- end of webjars -->
+	<!-- jasper -->
+	<dependency>
+		<groupId>net.sf.jasperreports</groupId>
+		<artifactId>jasperreports</artifactId>
+		<version>6.17.0</version>
+	</dependency>
+	<dependency>
+		<groupId>net.sf.jasperreports</groupId>
+		<artifactId>jasperreports-fonts</artifactId>
+		<version>6.17.0</version>
+	</dependency>
 	
    <dependency>
      <groupId>io.github.diduweiwu</groupId>
